<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">qlip</string>
    <string name="app_kind">qlip</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1657644727841599</string>
    <string name="default_date">0000\-00\-00 00:00:00</string>
    <string name="default_str">none</string>
    <string name="connect_offline">오프라인으로 접속하셨습니다.</string>
    <string name="action_search">검색</string>
    <string name="option_calendar">option</string>
    <string name="income_calendar">수입</string>
    <string name="spnet_calendar">지출</string>
    <string name="income_spent_calendar">수입/지출</string>
    <string name="except_type_calendar">제외내역</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="income_main">주수입</string>
    <string name="income_sub">부수입</string>
    <string name="loan">금융/대출</string>
    <string name="income_etc">기타수입</string>
    <string name="withdraw">출금</string>
    <string name="highlight">지출</string>
    <string name="monthly">월간</string>
    <string name="budget">예산</string>
    <string name="weekly">주간</string>
    <string name="oneday">일간</string>
    <string name="hashTag">태그</string>
    <string name="deposit_withdraw">수입/지출</string>
    <string name="advertisement">광고</string>
    <string name="food">외식</string>
    <string name="alcohol">술/유흥</string>
    <string name="cafe">카페/간식</string>
    <string name="education">학습/교육</string>
    <string name="transport">교통/차량</string>
    <string name="finance">금융/보험</string>
    <string name="culture">문화/예술</string>
    <string name="livings">주거/통신</string>
    <string name="mart">생활/마트</string>
    <string name="beauty">뷰티/미용</string>
    <string name="shopping">백화점/패션</string>
    <string name="health_care">의료/건강</string>
    <string name="travel">여행/숙박</string>
    <string name="leports">스포츠/레저</string>
    <string name="online">온라인쇼핑</string>
    <string name="family_event">경조사/회비</string>
    <string name="uncate">기타지출</string>
    <string name="qlip_tip">클립 팁</string>
    <string name="secession_complete">탈퇴 처리되었습니다.</string>
    <string name="session_complete"> 로그아웃되었습니다.</string>
    <string name="card_type_card">신용</string>
    <string name="card_type_check">체크</string>
    <string name="card_type_bank_account">계좌</string>
    <string name="card_type_cash">현금</string>
    <string name="card_type_corporation">법인</string>
    <string name="card_type_withdraw_to_check">체크</string>
    <string name="check_card">체크카드</string>
    <string name="credit_card">신용카드</string>
    <string name="dw_type_deposit_str">수입</string>
    <string name="dw_type_withdraw_str">지출</string>
    <string name="dw_type_deposit">입금</string>
    <string name="dw_type_withdraw">출금</string>
    <string name="google_play_not_installed">구글 플레이를 설치해주세요.</string>
    <string name="title_activity_lock_screen">설 정 -암호 잠금</string>
    <string name="input_security">암호 입력</string>
    <string name="input_security2">암호를 입력해주세요.</string>
    <string name="input_security3">암호가 일치하지 않습니다.</string>
    <string name="input_security4">암호가 일치하지 않습니다.\n다시 시도해주세요.</string>
    <string name="input_security5">확인을 위해 한 번 더 입력해주세요.</string>
    <string name="lock_num_0">0</string>
    <string name="lock_num_1">1</string>
    <string name="lock_num_2">2</string>
    <string name="lock_num_3">3</string>
    <string name="lock_num_4">4</string>
    <string name="lock_num_5">5</string>
    <string name="lock_num_6">6</string>
    <string name="lock_num_7">7</string>
    <string name="lock_num_8">8</string>
    <string name="lock_num_9">9</string>
    <string name="lock_num_back">back</string>
    <string name="lock_num_del">Del</string>
    <string name="lock_num_cls">cls</string>
    <string name="lock_num_clr">clr</string>
    <string name="lock_num_000">,000</string>
    <string name="lock_num_0000">만</string>
    <string name="title_activity_lv0">메인화면</string>
    <string name="lv0_on">ON</string>
    <string name="lv0_off">OFF</string>
    <string name="current_week">이번 주</string>
    <string name="last_week">지난주</string>
    <string name="current_month">이번 달</string>
    <string name="last_month">지난달</string>
    <string name="three_month">지난 3개월</string>
    <string name="lv0_monthly_header">%1$s (이번 달 지출)</string>
    <string name="lv0_category_header">%1$s (이번 달 %2$s 지출)</string>
    <string name="lv0_deposit_withdraw_header">%1$s (이번 달 순수입)</string>
    <string name="lv0_budget_header">%1$s (남은 예산)</string>
    <string name="lv0_weekly_header">%1$s (이번 주 지출)</string>
    <string name="lv0_monthly_pie_chart_title">이번 달 지출</string>
    <string name="lv0_oil_msg">유가 정보가 반영되었습니다.\n(출처 : 한국석유공사 오피넷)</string>
    <string name="lv0_budget_expected_recent_tran_title">예정 내역</string>
    <string name="lv0_monthly_recent_tran_title">최근 %1$s 내역</string>
    <string name="lv0_max_category">최대지출 카테고리</string>
    <string name="lv0_category">카테고리</string>
    <string name="lv0_max_card_type">최대지출 수단</string>
    <string name="lv0_card_type">지출 수단</string>
    <string name="lv0_deposit_withdraw_report">수입 보고서 더 보기</string>
    <string name="lv0_monthly_report">월간 보고서 더 보기</string>
    <string name="lv0_weekly_report">주간 보고서 더 보기</string>
    <string name="lv0_budget_report">예산 보고서 더 보기</string>
    <string name="lv0_advertisement">상품 보러가기</string>
    <string name="lv0_transaction_list">%1$s내역 더 보기</string>
    <string name="lv0_expected_transaction_list">예정내역 더 보기</string>
    <string name="lv0_samsung_apps_store">갤럭시 앱스 리뷰 남기기</string>
    <string name="lv0_qlip_play_store">구글 플레이 바로가기</string>
    <string name="lv0_app_sync">알림 연동하기</string>
    <string name="lv0_normal">%1$s 보고서 더 보기</string>
    <string name="lv0_notification">감사합니다.</string>
    <string name="lv0_qlip_thanks">클립을 이용해주셔서 감사합니다.</string>
    <string name="lv0_recent_title_2">이체/인출</string>
    <string name="lv0_budget_header_1">이번 달 예산</string>
    <string name="lv0_budget_header_2">예정된 지출</string>
    <string name="lv0_budget_header_3">잔여 할부</string>
    <string name="lv0_budget_header_chart_1">이번 달 예산 소진율</string>
    <string name="lv0_budget_header_chart_2">현재 일일 지출</string>
    <string name="lv0_budget_header_chart_more">초과</string>
    <string name="lv0_budget_header_chart_stable">적정</string>
    <string name="lv0_budget_header_chart_3">예산:%1$s</string>
    <string name="lv0_weekly_header_chart_1">이번 주 누적 지출</string>
    <string name="lv0_weekly_header_chart_2">주간 지출 추이</string>
    <string name="lv0_weekly_header_chart_3">권장지출:%1$s</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="none">none</string>
    <string name="server_client_id">947524036568-q7hq6fnpa7ph4nlasblisfm6lvo32pmh.apps.googleusercontent.com</string>
    <string name="facebook_empty_email">페이스북에 이메일 계정이 등록되어있지 않습니다. 일반 가입 또는 구글 계정을 연동해주세요.</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="email_empty">가입되지 않은 회원입니다.</string>
    <string name="password_incorrect">비밀번호가 일치하지 않습니다.</string>
    <string name="email_already_exist">이미 가입된 이메일입니다.</string>
    <string name="request_password_login">로그인하기</string>
    <string name="customLogin">로그인</string>
    <string name="password_title">비밀번호 요청</string>
    <string name="password_btn">재설정 링크 전송하기</string>
    <string name="password_bottom">클립을 처음 사용하시나요?</string>
    <string name="password_request_content">비밀번호를 잊으셨나요?</string>
    <string name="password_request_search">비밀번호 찾기</string>
    <string name="confirm_email_title">비밀번호 확인</string>
    <string name="request_password_msg">비밀번호 재설정 링크가 전송되었습니다.</string>
    <string name="sign_up">회원가입</string>
    <string name="email_hint">qlip@tenqube.com</string>
    <string name="home_tax_hint">홈택스 아이디를 입력하세요.</string>
    <string name="email_sign_up">이메일 가입하기</string>
    <string name="google_sign_up">구글로 가입하기</string>
    <string name="facebook_sign_up">페이스북으로 가입하기</string>
    <string name="already_sign_up">이미 아이디가 있으신가요?</string>
    <string name="go_login">로그인하기</string>
    <string name="invalid_email"> 이메일 형식이 맞지 않습니다.</string>
    <string name="password_limit">비밀번호는 최소 4자리 이상입니다.</string>
    <string name="password_confirm">일반 가입자의 경우 비밀번호 확인이 필요합니다.</string>
    <string name="home_tax_password_limit">비밀번호를 입력하세요.</string>
    <string name="private_login">공인인증서 로그인</string>
    <string name="login">로그인</string>
    <string name="confrim_email">비밀번호 확인</string>
    <string name="google_login">구글로 로그인하기</string>
    <string name="facebook_login">페이스북으로 로그인하기</string>
    <string name="qlip_init">클립을 처음 사용하시나요?</string>
    <string name="go_sign_up">가입하기</string>
    <string name="auto_save_id_pwd">아이디와 비밀번호 자동저장</string>
    <string name="home_tax_login">홈택스 로그인</string>
    <string name="agree">&lt;font color=\"#00a468\"&gt;&lt;u&gt;&lt;a href="http://tenqube.com/service_agreement_1.html"&gt;서비스 이용약관&lt;/a&gt;&lt;/u&gt;&lt;/font&gt;, &lt;font color=\"#00a468\"&gt;&lt;u&gt;&lt;a href="http://tenqube.com/service_agreement_2.html"&gt;개인정보 취급방침&lt;/a&gt;&lt;/u&gt;&lt;/font&gt; 및\n&lt;font color=\"#00a468\"&gt;&lt;u&gt;&lt;a href="http://tenqube.com/service_agreement_3.html"&gt;위치정보 활용&lt;/a&gt;&lt;/u&gt;&lt;/font&gt;에 동의합니다.</string>
    <string name="month_budget">월 예산</string>
    <string name="sign_up_step2_title">상세정보 입력</string>
    <string name="input_budget">월 예산을 입력해주세요</string>
    <string name="input_sex">성별을 입력해주세요 </string>
    <string name="input_birth">태어난 해를 입력해주세요 </string>
    <string name="xml_birth">태어난 해</string>
    <string name="xml_sex">성별</string>
    <string name="ten_thousand_won">만원</string>
    <string name="won">원</string>
    <string name="date">일</string>
    <string name="year">년</string>
    <string name="start_sign_up">가입하고 분석을 시작합니다!</string>
    <string name="request_permission_title_storage">외부 저장소에 대한 권한이 필요합니다.</string>
    <string name="request_permission_content_storage">엑셀 파일 내보내기를 위해 외부 저장소에 대한 권한이 필요합니다. 권한이 없는 경우 엑셀 파일 내보내기 사용이 불가합니다.</string>
    <string name="request_permission_title_location">위치정보 권한이 필요합니다.</string>
    <string name="request_permission_content_location">혜택 알림, 쿠폰 제공 등의 서비스를 위해 결제 시 위치정보를 수신합니다.</string>
    <string name="request_permission_title_sms">SMS 접근 권한이 필요합니다.</string>
    <string name="request_permission_content_sms">지출 내역을 자동으로 기록하고 분석하기 위해 SMS 접근 권한이 필요합니다. 권한이 없는 경우 정상적인 서비스 이용이 불가합니다.</string>
    <string name="request_permission_title_account_calendar">주소록, 캘린더 권한이 필요합니다.</string>
    <string name="request_permission_content_account_calendar">구글 캘린더 활용을 위해 주소록, 캘린더 권한이 필요합니다. 권한이 없는 경우 구글 캘린더 서비스 사용이 불가합니다.</string>
    <string name="request_permission_title_camera">카메라, 외부 저장소에 대한 권한이 필요합니다.</string>
    <string name="drawer_noti_catch">어플알림 연동</string>
    <string name="drawer_settings">설정</string>
    <string name="drawer_lv2_tran">수입•지출 내역</string>
    <string name="drawer_library_card_bank">카드•계좌</string>
    <string name="drawer_month_buget">월 예산</string>
    <string name="drawer_faq">도움말 및 옵션</string>
    <string name="delete_dialog_title">삭제하시겠습니까?</string>
    <string name="delete_dialog_content">내역이 삭제되며 복구할 수 없습니다.</string>
    <string name="delete_yes">삭제</string>
    <string name="delete_no">취소</string>
    <string name="search_usd">해외결제</string>
    <string name="search_domestic">국내결제</string>
    <string name="search_installment">할부</string>
    <string name="search_deposit_category">수입 카테고리</string>
    <string name="search_withdraw_category">지출 카테고리</string>
    <string name="search_card">카드</string>
    <string name="search_bank">계좌</string>
    <string name="search_tag">태그</string>
    <string name="search_etc">기타</string>
    <string name="search_repeat">반복</string>
</resources>