<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@color/transparent_background">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="24dp"
    android:elevation="24dp"
    android:layout_height="wrap_content"
    android:id="@+id/alert_bg"
    android:background="@color/white">


    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="@dimen/dialog_large_text"
        android:id="@+id/title"
        android:textColor="@color/black"
        android:text="@string/delete_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/content"
            android:textSize="@dimen/dialog_small_text"
            android:textColor="#A0A0A0"
            android:text="@string/delete_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <TextView
            android:gravity="center"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:id="@+id/cancel"
            android:background="@drawable/lv0_selector"
            android:text="@string/delete_no"
            android:textColor="@color/qlip_main_blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:gravity="center"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:background="@drawable/lv0_selector"
            android:id="@+id/enter"
            android:text="@string/delete_yes"
            android:textColor="@color/qlip_main_blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>
</LinearLayout>
